--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.11.0"
