--- a/package.json
+++ b/package.json
@@ -3,17 +3,8 @@
   "version": "0.0.1",
   "description": "Put a description here",
   "main": "dist/index.js",
-  "peerDependencies": {
-    "react": "^16.2.0"
-  },
-  "dependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "webpack": "^3.11.0"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "webpack --watch",
     "build": "webpack",
     "lint": "eslint ./ --ignore-path .gitignore",
@@ -22,6 +13,15 @@
   "author": {
     "name": "Daniel Hollcraft",
     "email": "daniel@hollcraft.com"
+  },
+  "peerDependencies": {
+    "react": "^16.2.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.11.0"
   },
   "devDependencies": {
     "@storybook/react": "^3.3.13",
@@ -32,10 +32,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.5.1",
+    "enzyme": "^3.3.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^22.3.0"
   }
 }
