--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Put a description here",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
+    "test:w": "jest --watch",
+    "coverage": "jest --coverage",
     "start": "webpack --watch",
     "build": "webpack",
     "lint": "eslint ./ --ignore-path .gitignore",
